--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "requirejs": "^2.1.22"
+  },
+  "devDependencies": {
+    "http-server": "^0.8.5"
   }
 }
